# AprilTagRealtimeDetection

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Realtime Object Detection PRD.md  vcpkg.json
config/: default_config.toml
docs/: USAGE.md
src/: main.cpp
src/app/: Application.cpp  Application.h  SessionManager.cpp  SessionManager.h
src/calibration/: CalibrationStore.cpp  CalibrationStore.h  Calibrator.cpp  Calibrator.h
src/camera/: CameraDevice.cpp  CameraDevice.h  CameraManager.cpp  CameraManager.h  FrameRingBuffer.h
src/common/: Types.h
src/detection/: DetectionPool.cpp  DetectionPool.h  PoseEstimator.cpp  PoseEstimator.h  TagDetector.cpp  TagDetector.h
src/io/: ConfigManager.cpp  ConfigManager.h  CsvWriter.cpp  CsvWriter.h  JsonWriter.cpp  JsonWriter.h  TimeSeriesLogger.cpp  TimeSeriesLogger.h
src/tracking/: JointLinkage.cpp  JointLinkage.h  OneEuroFilter.h
src/ui/: ControlPanel.cpp  ControlPanel.h  JointConfigEditor.cpp  JointConfigEditor.h  NotificationManager.cpp  NotificationManager.h  Renderer.cpp  Renderer.h  Viewport.cpp  Viewport.h
